# critical-minerals-data-tools

./: .gitignore  PROJECT_LOG.md  README.md
BGS_MCP/: README.md  pyproject.toml  test_ollama.py  test_openai.py
BGS_MCP/src/bgs_mcp/: __init__.py  api.py  bgs_client.py  server.py
CLaiMM/: .env.example  CLaiMM_Data.tar  README.md  bgs_download.py  pyproject.toml
CLaiMM/CLaiMM_Data/: 260104_CLaiMM_Data_Analysis.docx  260104_CLaiMM_Data_Sets_Found.md  DATA_FILES_README.md  claimm_all_schemas.json  claimm_complete_schema_report.json  claimm_datasets.json  claimm_datasets_enhanced.json  claimm_field_schemas.json  claimm_metadata_summary.json  claimm_schema.json  schema_documentation_report.json
CLaiMM/src/claimm_mcp/: __init__.py  config.py  edx_client.py  header_detector.py  llm_client.py  server.py  server_agnostic.py
CMM_API/: README.md  coal_ash_schemas.json  pyproject.toml  test_ollama.py  test_openai.py
CMM_API/src/cmm_api/: __init__.py  clients.py  config.py  mcp_server.py  server.py
Data_Types/: schema_mapping.py
OSTI_MCP/: README.md  pyproject.toml
OSTI_MCP/src/osti_mcp/: __init__.py  client.py  server.py
UNComtrade_MCP/: .env.example  .gitignore  README.md  pyproject.toml
UNComtrade_MCP/src/uncomtrade_mcp/: __init__.py  client.py  models.py  server.py
UNComtrade_MCP/tests/: test_client.py
USGS_MCP/: README.md  pyproject.toml
USGS_MCP/src/usgs_mcp/: __init__.py  api.py  mrds_client.py  osm_client.py  server.py  usgs_client.py
docs/examples/: .gitignore  bgs_globe.html
scripts/: run_bgs_api.sh  run_demo.sh  run_docs_server.sh  run_usgs_api.sh
