[project]
name = "cmm-api"
version = "0.1.0"
description = "Unified REST API for Critical Minerals and Materials - Combines CLAIMM (NETL EDX) and BGS World Mineral Statistics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "openai>=2.14.0",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
cmm-api = "cmm_api.server:main"
cmm-mcp = "cmm_api.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cmm_api"]
